<resources>
    <string name="app_name">Test Radio Button</string>
    <string name="action_settings">Settings</string>

    <!-- Input identifying -->
    <string name="name">"Your name here"</string>
    <string name="country">"Your location here"</string>

    <!-- Questions -->
    <string name="q1">what is the capital city of France?</string>
    <string name="q2">what is the capital city of Indonesia?</string>
    <string name="q3">what is the capital city of UK?</string>
    <string name="q4">what is the capital city of USA?</string>
    <string name="q5">what is the capital city of Italy?</string>
    <string name="q6">what is the capital city of Netherland?</string>
    <string name="q7">what is the capital city of Japan?</string>
    <string name="q8">what is the capital city of Mongolia?</string>

    <!-- Test Summary -->
    <string name="status">Thank you !</string>
</resources>
