<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">




        <TextView
            android:text="@string/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Paris"
                android:onClick="onRadioButtonClicked"
                />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rennes"
                android:onClick="onRadioButtonClicked"
                />

        </RadioGroup>


        <TextView
            android:text="@string/q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jakarta"
                android:onClick="onRadioButtonClicked2"
                />

            <RadioButton
                android:id="@+id/radio22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bandung"
                android:onClick="onRadioButtonClicked2"
                />

        </RadioGroup>

        <TextView
            android:text="@string/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="London"
                android:onClick="onRadioButtonClicked3"
                />

            <RadioButton
                android:id="@+id/radio32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Baltimore"
                android:onClick="onRadioButtonClicked3"
                />

        </RadioGroup>

        <TextView
            android:text="@string/q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Washington DC"
                android:onClick="onRadioButtonClicked4"
                />

            <RadioButton
                android:id="@+id/radio42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New York"
                android:onClick="onRadioButtonClicked4"
                />

        </RadioGroup>

        <TextView
            android:text="@string/q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rome"
                android:onClick="onRadioButtonClicked5"
                />

            <RadioButton
                android:id="@+id/radio52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Milan"
                android:onClick="onRadioButtonClicked5"
                />

        </RadioGroup>

        <TextView
            android:text="@string/q6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amsterdam"
                android:onClick="onRadioButtonClicked6"
                />

            <RadioButton
                android:id="@+id/radio62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gronigen"
                android:onClick="onRadioButtonClicked6"
                />

        </RadioGroup>

        <TextView
            android:text="@string/q7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tokyo"
                android:onClick="onRadioButtonClicked7"
                />

            <RadioButton
                android:id="@+id/radio72"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kyoto"
                android:onClick="onRadioButtonClicked7"
                />

        </RadioGroup>

        <TextView
            android:text="@string/q8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            />

        <RadioGroup
            android:id="@+id/radioGroup8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio81"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ulam Bator"
                android:onClick="onRadioButtonClicked8"
                />

            <RadioButton
                android:id="@+id/radio82"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adisababa"
                android:onClick="onRadioButtonClicked8"
                />

        </RadioGroup>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_horizontal"
          android:orientation="horizontal"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_margin="25dp"
                android:onClick="submitTest"
                android:textSize="16sp"
                android:textColor="#FFF"
                android:text="SUBMIT" />


            <Button
                android:id="@+id/reset"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_margin="25dp"
                android:textSize="16sp"
                android:onClick="resetTest"
                android:textColor="#FFF"
                android:text="RESET" />

     </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Test Result"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/test_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#000000"
        android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
